--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -222,7 +222,7 @@
         </article>
     </div>
 
-    <script src="./html.js"></script>
+    <script src="/html.js"></script>
 </body>
 
 </html>
